Bug 152990 - Embedded OLE objects scaled wrong
Summary: Embedded OLE objects scaled wrong
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.5.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.6.0 target:7.5.0
Keywords: bibisected, bisected, regression
: 153025 (view as bug list)
Depends on:
Blocks: OLE-Objects regression-scaled-glyph-positions
  Show dependency treegraph
 
Reported: 2023-01-12 12:46 UTC by Buovjaga
Modified: 2024-07-16 02:30 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Buovjaga 2023-01-12 12:46:56 UTC
1. Open attachment 180272 [details] from bug 149212
2. Go to slide 7 and start presentation with Shift-F5

Bibisected with linux-64-7.5 to
https://git.libreoffice.org/core/commit/1fa731d03ba0f22cb9392a578124ea977eaab2e9
tdf#150462 don't prescale dxarray before using DrawTextArray

Seen on Windows and Linux.
Comment 1 Telesto 2023-01-12 13:09:49 UTC
Confirm
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 12e8d57e791bb1befc0716d4d02af7d1d1ccb4ae
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL threaded
Comment 2 Caolán McNamara 2023-01-13 16:56:43 UTC
I think the canvas code that parses the metafile actions doesn't do it the same same as vcl does and while it scales the text postions as expected, it doesn't handle the font size as expected. So glyphs are positioned where they should be, but the size isn't right.
Comment 3 Commit Notification 2023-01-14 10:54:59 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b008831a5545e5a777d77547ef96b9798d795f30

tdf#152990 set the font after the MapMode is (potentially) set

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Caolán McNamara 2023-01-14 10:55:42 UTC
seems to work in trunk now, backport to 7-5 in gerrit
Comment 5 Commit Notification 2023-01-14 15:31:23 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/d5c8b38eab3d3766f403a33e11dffa498655be8f

tdf#152990 set the font after the MapMode is (potentially) set

It will be available in 7.5.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Xisco Faulí 2023-01-16 09:28:40 UTC
*** Bug 153025 has been marked as a duplicate of this bug. ***
Comment 7 Buovjaga 2023-01-16 10:10:39 UTC
Looks nice now

Arch Linux 64-bit, X11
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 0160109aae49189f5cc9bed60db3c7084003e471
CPU threads: 8; OS: Linux 6.1; UI render: default; VCL: kf5 (cairo+xcb)
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: threaded Jumbo
Built on 16 January 2023
Comment 8 Commit Notification 2023-01-17 10:30:08 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-5-0":

https://git.libreoffice.org/core/commit/a4a31e6a7b6e84689ff5dbafbd0baf1992729495

tdf#152990 set the font after the MapMode is (potentially) set

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.