tdf#152990 set the font after the MapMode is (potentially) set

Change-Id: I64617a5c85e7e6b444aac705ebbfdd777b4ea55a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/145442
Tested-by: Jenkins
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>
(cherry picked from commit d5c8b38eab3d3766f403a33e11dffa498655be8f)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/145453
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>